<resources>
    <string name="app_name">Chat</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="create_account">Create Account</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_display_name">Enter Display Name</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="start_activity">Welcome to Chat!</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_in">Enter Credentials</string>

    <string name="title_activity_settings">Settings</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="set_status">Set Status</string>
    <string name="status_hint">Yours Status...</string>
    <string name="send_request">Send Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="decline_request">Decline Request</string>
    <string name="accept_request">Accept Request</string>
    <string name="unfriend">Unfriend</string>
    <string name="invite">Invite</string>
    <string name="invite_text">I\'m inviting you to try Chat!</string>
    <string name="invite_link">Link</string>
    <string name="change_profile_image">Change Image</string>
    <string name="change_status">Change Status</string>
</resources>
