<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConsraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/chat_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/start_activity"
        android:textColor="@color/colorTextIcons"
        android:layout_below="@+id/imageView"
        android:textSize="24sp" />

    <Button
        android:id="@+id/start_reg_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:gravity="center_vertical"
        android:text="@string/need_a_new_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/start_login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center_vertical"
        android:text="@string/already_have_an_account"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/start_reg_activity"
        android:textColor="@color/colorTextIcons" />

</RelativeLayout>